--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,13 @@ h1 {
 	font-size: 2rem;
 }
 
+.search-box {
+	background-color: lightblue;
+	border: 1px solid blue;
+	min-height: 50px;
+	font-size: 2rem;
+}
+
 .search-container {
 	height: 800px; 
 	background-color: rgba(0,0,255,0.1);
@@ -33,13 +40,6 @@ h1 {
 	background-color: lightblue;
 	border: 1px solid blue;
 	min-height: 500px;
-	font-size: 2rem;
-}
-
-.search-bar-box {
-	background-color: lightgreen;
-	border: 1px solid red;
-	min-height: 50px;
 	font-size: 2rem;
 }
 
