--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-.thumbnail {
-    position: relative;
-	max-width: 200px;
-}
 
 .caption {
     position: absolute;
@@ -15,13 +11,18 @@ body {
 	background-color: white;
 }
 
-/* .header-box { */
-	/* background-color: lightblue;
-	border: 1px solid blue; */
-	/* min-height: 50px;
-	font-size: 2rem; */
+ /* Style for the Navbar  */
+.customNav { 
+	/* position: fixed; */
+	background-color: lightblue;
+	/* border-radius: 15px 15px 15px 15px; */
+    border: 2px solid #dcfffd;
+	z-index: 100;}
 	
-/* } */
+	/* Style for the logo in Navbar */
+.navbar-brand img {
+	width: 130px;
+  }
 
 h1 {
 	text-align: center;
@@ -31,7 +32,7 @@ h1 {
 
 .jumbo-box {
 	background-color: lightblue;
-	img: width 100%;
+	
 }
 
 .search-box {
@@ -83,3 +84,9 @@ h1 {
 	left: 50%;
 	transform: translate(-50%, -50%);
   }
+
+  /* Style for the button */
+.btn {
+	background-color: rgb(166, 204, 216);
+	border: none;
+};
